# avangard-test

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  env.sample  pyproject.toml
src/: app.py
src/apps/base/: services.py  validations.py
src/apps/confidential_data/: models.py  services.py
src/apps/confidential_data/api/: resources.py  routing.py  schemas.py  utils.py
src/apps/users/: models.py  services.py
src/apps/users/api/: resources.py  routing.py  schemas.py
src/migrations/: env.py
src/migrations/versions/: 5c30f457dd89_username_field_unique_constraint.py  881fee453414_user_model.py  ec2dba565764_create_all_tables.py  fd2ed394aa83_data_model.py
src/settings/: __init__.py  config.py  config_database.py
